--- a/src/app/pages/our-members/our-members.component.html
+++ b/src/app/pages/our-members/our-members.component.html
@@ -32,7 +32,7 @@
               <li *ngFor="let member of members">
                 <div class="member_box">
                   <div class="member_img">
-                    <img [src]="member?.image" alt="">
+                    <img [src]="member?.image?.signedUrl" alt="">
                     <!-- <div class="overlay"></div> -->
                   </div>
 
